--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel='styleSheet' href="./stylesheet.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <title>Indecision App</title>
 </head>
 <body>
+    <div id="app"></div>
     <script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
-    <script src="./index.html"></script>
+    <script src="./scripts/app.js"></script>
 </body>
 </html>
