--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,6 @@
 </head>
 <body>
     <div id="app"></div>
-    <script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
-    <script src="./scripts/app.js"></script>
+    <script src="./bundle.js"></script>
 </body>
 </html>
