--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='styleSheet' href='./reset.css'>
-    <link rel='styleSheet' href="./stylesheet.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="icon" type="image/png" href="./image/lamp.png.png">
     <title>Indecision App</title>
 </head>
 <body>
